--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "node-files",
+  "name": "files",
   "version": "1.0.0",
-  "description": "",
   "main": "step1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "axios": "^0.21.0"
+  }
 }
